kemal/kubernetes/objects/4-statefulset.yaml
# StatefulSet manifest dosyası
# Bu dosya, durum bilgisi gerektiren uygulamalar için pod'ların sıralı ve kimlikli bir şekilde oluşturulmasını sağlar.
# StatefulSet, pod'ların belirli bir sırada veya belirli bir adla oluşturulmasını sağlar.
# Mesela bir database'in oluşturulması gibi.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-statefulset  # StatefulSet adı
  namespace: my-namespace     # Oluşturulacağı namespace
spec:
  serviceName: "example-headless"  # StatefulSet pod'larının ağ iletişimi için headless service adı
  replicas: 2                     # Çalıştırılacak pod sayısı
  selector:
    matchLabels:
      app: stateful-app         # Eşleştirme etiketi
  template:
    metadata:
      labels:
        app: stateful-app       # Pod'a atanacak etiket
    spec:
      containers:
      - name: stateful-container  # Container adı
        image: nginx:latest       # Kullanılan image
        ports:
        - containerPort: 80       # Container portu
        volumeMounts:        # Container içindeki mount noktası
        - name: data
          mountPath: /usr/share/nginx/html  # Nginx'in web root dizini
        - name: config-volume               # Konfigürasyon için ek volume
          mountPath: /etc/nginx/conf.d
      volumes:              # Ek volume'lar (ConfigMap, Secret vb. için)
      - name: config-volume
        configMap:
          name: nginx-config
  volumeClaimTemplates:
  - metadata:
      name: data                # PVC adı
    spec:
      accessModes: [ "ReadWriteOnce" ] # Digerleri ReadWriteMany, ReadWriteOncePod, ReadOnlyMany
      resources:
        requests:
          storage: 256Mi         # İstenen disk kapasitesi
