kemal/kubernetes/objects/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: my-namespace
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: dashboard
      targetPort: 8080
  type: NodePort
